# flb-input-dnstap

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  test_script.sh
.github/: flb-versions.json
.github/workflows/: build.yml  release.yml  reusable-build.yml
in_dnstap/: CMakeLists.txt  dnstap.pb-c.c  dnstap.pb-c.h  dnstap_decode.c  dnstap_decode.h  dnstap_parser.c  dnstap_parser.h  in_dnstap.c  in_dnstap.h
proto/: dnstap.proto
scripts/: build-static-deps.sh
tests/: CMakeLists.txt  test_dnstap_decode.c  test_dnstap_parser.c
tests/stubs/: flb_test_compat.h  mk_list.h
tests/stubs/fluent-bit/: flb_config_map.h  flb_info.h  flb_input.h  flb_input_plugin.h  flb_log.h  flb_log_event_encoder.h  flb_network.h  flb_sds.h
